tests/fsharp/typecheck/sigs/neg49.bsl

neg49.fs(5,17,5,18): typecheck error FS0040: This and other recursive references to the object(s) being defined will be checked for initialization-soundness at runtime through the use of a delayed reference. This is because you are defining one or more recursive objects, rather than recursive functions. This warning may be suppressed by using '#nowarn "40"' or '--nowarn:40'.

neg49.fs(5,13,5,14): typecheck error FS0031: The value 'X' will be evaluated as part of its own definition

neg49.fs(8,18,8,20): typecheck error FS0040: This and other recursive references to the object(s) being defined will be checked for initialization-soundness at runtime through the use of a delayed reference. This is because you are defining one or more recursive objects, rather than recursive functions. This warning may be suppressed by using '#nowarn "40"' or '--nowarn:40'.

neg49.fs(8,13,8,15): typecheck error FS0031: This value will be eventually evaluated as part of its own definition. You may need to make the value lazy or a function. Value 'X1' will evaluate 'X2' will evaluate 'X1'.

neg49.fs(12,18,12,20): typecheck error FS0040: This and other recursive references to the object(s) being defined will be checked for initialization-soundness at runtime through the use of a delayed reference. This is because you are defining one or more recursive objects, rather than recursive functions. This warning may be suppressed by using '#nowarn "40"' or '--nowarn:40'.

neg49.fs(12,13,12,15): typecheck error FS0031: This value will be eventually evaluated as part of its own definition. You may need to make the value lazy or a function. Value 'X1' will evaluate 'X3' will evaluate 'X1'.

neg49.fs(17,18,17,20): typecheck error FS0040: This and other recursive references to the object(s) being defined will be checked for initialization-soundness at runtime through the use of a delayed reference. This is because you are defining one or more recursive objects, rather than recursive functions. This warning may be suppressed by using '#nowarn "40"' or '--nowarn:40'.

neg49.fs(17,13,17,15): typecheck error FS0031: This value will be eventually evaluated as part of its own definition. You may need to make the value lazy or a function. Value 'X1' will evaluate 'X3' will evaluate 'X2' will evaluate 'X1'.

neg49.fs(22,18,22,20): typecheck error FS0040: This and other recursive references to the object(s) being defined will be checked for initialization-soundness at runtime through the use of a delayed reference. This is because you are defining one or more recursive objects, rather than recursive functions. This warning may be suppressed by using '#nowarn "40"' or '--nowarn:40'.

neg49.fs(22,13,22,15): typecheck error FS0031: This value will be eventually evaluated as part of its own definition. You may need to make the value lazy or a function. Value 'X1' will evaluate 'X3' will evaluate 'X1'.

neg49.fs(27,18,27,20): typecheck error FS0040: This and other recursive references to the object(s) being defined will be checked for initialization-soundness at runtime through the use of a delayed reference. This is because you are defining one or more recursive objects, rather than recursive functions. This warning may be suppressed by using '#nowarn "40"' or '--nowarn:40'.

neg49.fs(27,13,27,15): typecheck error FS0031: This value will be eventually evaluated as part of its own definition. You may need to make the value lazy or a function. Value 'X1' will evaluate 'X3' will evaluate 'X1'.
